# LLM-Twin

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  lab.py  notepad.py  pyproject.toml
configs/: digital_data_etl_maxime_labonne.yaml  digital_data_etl_paul_iusztin.yaml
llm_engineering/: __init__.py  settings.py
llm_engineering/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_engineering/application/utils/: __init__.py  split_user_full_name.py
llm_engineering/domain/: documents.py  exceptions.py  types.py
llm_engineering/domain/base/: __init__.py  nosql.py
llm_engineering/infra/db/: mongo.py
pipelines/: __init__.py  digital_data_etl.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_user.py
tools/: run.py
